fixed some awkward wording

--- a/content/post/esri_rest.Rmd
+++ b/content/post/esri_rest.Rmd
@@ -256,7 +256,7 @@ This tutorial was created in RStudio 1.2.5033 (RStudio Team, 2015), using R 3.6.
 
 We utilized two APIs, S_USA.InvasivePlantCurrent (Natural Resource Information Systems, U.S. Forest Service, 2020) and Administrative Forest (Automated Lands Program, U.S. Forest Service, 2020).
 
-The following packages were utilized to obtain, clean, and visualize data:
+The following packages were used to obtain, clean, and visualize data:
 
 + sf (v0.9.2; Edzer Pebesma, 2020)
 
