--- a/content/post/esri_rest.Rmd
+++ b/content/post/esri_rest.Rmd
@@ -43,9 +43,9 @@ FORESTNAME = 'Angeles National Forest'
 
 into the WHERE field.  
 
-Esri Rest query statements, like SQL, are sensitive to the types of quotes one uses.  Thus the above where statement works, however `FORESTNAME = "Angeles National Forest"` would return an error.  If your queries are continually returning errors or empty values ensure you're using single quotes and your capitalization is correct!
+Esri Rest queries, like SQL, are sensitive to the types of quotes one uses.  Thus the above where statement works, however `FORESTNAME = "Angeles National Forest"` would return an error.  If your queries are continually returning errors or empty values ensure you're using single quotes and your capitalization is correct!
 
-Enter an asterisk (\*)into the Out Fields parameter.  This indicates you wish to return all fields within the dataset.  Hit **Query (GET)** at the bottom of the page and you should see some HTML describing an entry within the dataset appear at the base of your window.  Hurray!  You have successfully queried an Esri REST API!
+Enter an asterisk (\*) into the Out Fields parameter.  This indicates you wish to return all fields within the dataset.  Hit **Query (GET)** at the bottom of the page and you should see some HTML describing an entry within the dataset appear at the base of your window.  Hurray!  You have successfully queried an Esri REST API!
 
 Moving forward, let's generalize this WHERE clause just a bit.  For instance, let's say you aren't quite certain about the name of the national forest polygon you're interested in obtaining.  Or, better yet, let's say you're implementing this query within a program which takes in user input describing which national forest polygon to request, however you can't depend on your users to enter a full or exact forest name.  Try:
 
@@ -77,7 +77,7 @@ Now that we have the location of the relevant GeoJSON file, copy the URL from th
 forest <- geojson_sf("https://apps.fs.usda.gov/arcx/rest/services/EDW/EDW_ForestSystemBoundaries_01/MapServer/0/query?where=FORESTNAME+LIKE+%27%25Tahoe+National%25%27&text=&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&relationParam=&outFields=*&returnGeometry=true&returnTrueCurves=false&maxAllowableOffset=&geometryPrecision=&outSR=&having=&returnIdsOnly=false&returnCountOnly=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&returnZ=false&returnM=false&gdbVersion=&historicMoment=&returnDistinctValues=false&resultOffset=&resultRecordCount=&queryByDistance=&returnExtentOnly=false&datumTransformation=&parameterValues=&rangeValues=&quantizationParameters=&featureEncoding=esriDefault&f=geojson")
 
 ```
-It should be noted that this code may generate a warning message stating 'incomplete final line found.'  This is a result of the geojson file missing an end of file marker or a return at its end.  This can safely be ignored in the context of this tutorial.
+It should be noted that this code may generate a warning message stating 'incomplete final line found.'  This is a result of the geojson file missing an end of file marker or a return at its end.  This warning can safely be ignored in the context of this tutorial.
 
 
 Let's take a look at this data!
@@ -164,7 +164,7 @@ This is the parameter which dictates which fields of the dataset will be returne
 
 We will not go into the remaining parameters, if you'd like to explore them yourself you can do so within the [API reference](https://gis.fws.gov/arcgis/sdk/rest/index.html#//02ss0000006v000000).  
 
-The rest of parameters I've set at their default value.  Note, if the default values of a parameter are being used their values do not need to be set within your query. For the purposes of this tutorial they were included to give a clear representation of parameters versus the base URL.  The following (significantly smaller) chunk of code would accomplish the same goal.  It should also be noted that esriSpatialRelIntersects is the default value of spatialRel.
+The rest of parameters have been set at their default value.  Note, if the default values of a parameter are being used their values do not need to be set within your query. For the purposes of this tutorial they were included to give a clear representation of parameters versus the base URL.  The following (significantly smaller) chunk of code would accomplish the same goal.  It should also be noted that esriSpatialRelIntersects is the default value of spatialRel.
 
 ```{r query_invasive, echo=TRUE, warning = F, message=F, results=F}
 #baseURL for  Forest Service invasive species API
@@ -228,7 +228,7 @@ And there you have it!  We hope this tutorial has been informative!
 
 + Locate the [European Countries API](https://bio.discomap.eea.europa.eu/arcgis/rest/services/Internal/Basemap_EEA_countries_WM/MapServer) and the [Hydrography API](https://maratlas.discomap.eea.europa.eu/arcgis/rest/services/Maratlas/Hydrography/MapServer)
 
-+ Explore the available data layers within each API in the ArcGIS Online Map Viewer.  Note: Maker sure you select 'View in:' ArcGIS Online Mapviewer not 'View footprint in:'
++ Explore the available data layers within each API in the ArcGIS Online Map Viewer.  Note: Ensure you select 'View in:' ArcGIS Online Mapviewer not 'View footprint in:'
 
 + Use the Contents pane in the left hand side of the mapviewer to toggle which data layers are shown
 
